--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/weather-icons.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     </head>
     <body>
@@ -48,6 +49,7 @@
             <p id="temperature">
                 
             </p>
+            <i class="wi wi-night-sleet"></i>
         </div>
         
  
