added usage of icons based on the chance of rain and if it is daytime or not , new background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/weather-icons.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -39,17 +38,15 @@
         </div> -->
         <div class="iconContainer">
             <div class="icon">
-        <img id="icon" src="" alt="Icon depicting current weather conditions">
-
-        </img>
     </div>
 
         </div>
         <div class="temperature">
-            <p id="temperature">
-                
-            </p>
-            <i class="wi wi-night-sleet"></i>
+            <div class="iconDiv">
+                <i id="weatherIcon"></i> 
+            </div>
+            <p id="temperature">      
+            </p> 
         </div>
         
  
