Added support for multiple weather alerts Fixed "There is a null% of rain" replaced with "There is a 0% chance of rain"

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <div class="buttons">
         </div>
         <br>
-        <p id="weatherAlerts">
+        <h1 style="text-align: center;"> Active Weather Alerts: </h1>
+        <div id="weatherAlerts">
 
-        </p>
+        </div>
         <div class="weatherContainer">
   
             <p id="city">
