fixed responsive issues (hopefully) and added when forecast is valid until and the time of day of the forecast

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1 style="text-align: center;"> Active Weather Alerts: </h1>
+        <h1 class="centered alertTitle"> Active Weather Alerts: </h1>
         <div id="weatherAlerts">
-
         </div>
         <div class="weatherContainer">
             <p id="city"></p>
             <p id="state"></p>
+            <p id="weatherFor"></p>
+            <p id="weatherValidTime"></p>
             <div class="temperature">
                 <div class="iconDiv">
                   <i id="weatherIcon"></i> 
                 </div>
                 <div class="temperatureDIv">
                     <p id="temperature"> </p>  
-                     <p id="shortForecast" style="font-size: 1.5rem;"></p>  
+                     <p id="shortForecast"></p>  
                 </div>
               <div class="windRainContainer">
                 <div class="windDIv">
