--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <![endif]-->
         <label class="useDaily">
             <input type="checkbox" name="checkbox" id="useDaily" />
-            Use Daily forecast 
+            Use Hourly forecast 
           </label>
           <button onclick="getLocation();"> Get Weather</button>
         <h1 class="centered alertTitle hidden" id="alertTitle" > Active Weather Alerts: </h1>
