--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img id="weatherImage" style="float: right;" onload="removeBorder()" />
           </div>
             <!-- Text -->
-            <div style="margin-left: 15px;line-height: 0.5;">
+            <div class="temperatureDIv">
               <p id="temperature"></p>
               <p id="feelsLike"></p>
               <p id="shortForecast"></p>
@@ -70,8 +70,5 @@
 </div>
   <script src="scripts.js" async defer></script>
 </body>
-       
-        <script src="scripts.js" async defer></script>
-    </body>
 
 </html>
