--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <input type="checkbox" name="checkbox" id="useDaily" />
           Get Hourly forecast
       </label><br>
-      <button id="showWeather" onclick="getLocation(); off(); showReloadButton();"  type="button" class="btn">Get Weather</button><br>
+      <button id="showWeather" onclick="getLocation(); off(); showReloadButton();"  type="button" class="btn focus-ring">Get Weather</button><br>
   </div>  
-  <button onclick="on();" id="reloadWeather" type="button" class="btn btn-link hidden">Settings</button>
+  <button onclick="on();" id="reloadWeather" type="button" class="btn btn-link hidden focus-ring">Settings</button>
   <main id="mainContent">
     <h1 class="centered alertTitle hidden" id="alertTitle">Active Weather Alerts:</h1>
     <p id="city" class="text-center"></p>
