--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </div>
 <div class="text-center">
   <h3> Get future forecasts</h3>
-  <select id="futurePeriods"></select>
-  <button onclick="getFutureForecast()">Get future Forecasts </button>
+  <select id="futurePeriods" class="form-select form-select-sm" aria-label=".form-select-sm example"></select>
+  <button class="btn btn-secondary" onclick="getFutureForecast()">Get future Forecasts </button>
 </div>
   </main>
 </div>
