--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <link rel="stylesheet" href="css/weather-icons.css">
 </head>
 
-<body onload="on()"style="background-color: #2ecc71;margin-top:3%;">
+<body onload="on();"style="margin-top:3%;">
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="container">
-    <div class="weatherSettings" id="overlay">
+    <div class="therSettings" id="overlay">
       <!-- <h1 id="settings">Settings</h1>
       <label class="useDaily" id="daily">
           <input type="checkbox" name="checkbox" id="useDaily" />
