Signed-off-by: abonilla17 <alexanderbjr@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -70,12 +71,12 @@
 <i class="fa-solid fa-percent hidden" style="font-weight: normal;"></i>
     </div>
     <div class="col">
-      <h3> Feels like: </h3>
+      <h3> Feels like:* </h3>
       <p id="feelsLike"></p>
     </div>
   </div>
 </div>
-<h3 class="text-center">Hourly forecasts</h3>
+<h3 class="text-center">Upcoming weather</h3>
 <br>
 <div class="hourlyForecastsContainer">
   <div class="row">
@@ -108,6 +109,9 @@
       <p id="windForecast3"></p>
     </div>
   </div>
+  <p id="feelsLikeCalculation">
+
+  </p>
 </div>
 <!-- <div class="text-center">
   <h3> Get future forecasts</h3>
